crates/test-files/fixtures/compile_errors/call_call_on_external_contract.fe
contract Foo:
  pub fn __call__():
    pass
  fn f():
    pass


contract Bar:
  fn b():
    let foo: Foo = Foo(address(0))
    foo.__call__()
